# ocode_prj

./: .gitignore  README.md  main.py  pyproject.toml
guardrailed_agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
guardrailed_agent/app/: config.py  main.py  schemas.py
guardrailed_agent/app/api/: routes.py
guardrailed_agent/app/graph/: agent_graph.py  nodes.py
guardrailed_agent/app/guardrails/: scope_checker.py  scope_config.py
guardrailed_agent/tests/: test_api.py
