[project]
name = "guardrailed-agent"
version = "0.1.0"
description = "Guardrailed AI Agent (LangChain + LangGraph) for web scraping topics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "langgraph==0.2.34",
    "langchain-core==0.3.10",
    "langchain-groq==0.2.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
